--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,5 +34,7 @@ allprojects {
           // All of Detox' artifacts are provided via the npm module
           url "$rootDir/../node_modules/detox/Detox-android"
         }
+//        maven { url "https://jitpack.io" } 
+//        maven { url "https://maven.google.com" } 
     }
 }
