--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jest": "24.8.0",
     "metro-react-native-babel-preset": "0.54.1",
     "mocha": "^6.1.4",
+    "nock": "^10.0.6",
     "react-test-renderer": "16.8.3"
   },
   "jest": {
