--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start": "RN_SRC_EXT=e2e.js react-native start --config rn-cli.config.js",
     "test": "./node_modules/.bin/jest __tests__",
     "detox": "RN_SRC_EXT=e2e.js detox test -c android.emu.debug"
   },
