--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -124,10 +124,21 @@ android {
             include "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
         }
     }
+
+    signingConfigs {
+      release {
+        storeFile file("my-release-key.keystore")
+        storePassword "beefalo"
+        keyAlias "my-key-alias"
+        keyPassword "beefalo"
+      }
+    }
     buildTypes {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            // 2019-2-28 https://github.com/facebook/react-native/issues/8980#issuecomment-276490204
+            signingConfig signingConfigs.release
         }
     }
     // applicationVariants are e.g. debug, release
