--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.5.1",
     "axios": "^0.19.0",
-    "form-data": "^2.5.0",
-    "react": "16.8.3",
-    "react-native": "0.59.9",
-    "react-native-camera": "^2.11.0",
+    "react": "^16.8.6",
+    "react-native": "^0.59.9",
+    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-flash-message": "^0.1.13",
     "react-native-vector-icons": "^6.5.0"
   },
