--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "@react-native-community/async-storage": "^1.5.1",
     "axios": "^0.19.0",
     "react": "^16.8.6",
-    "react-native": "^0.59.9",
+    "react-native": "^0.63.2",
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-flash-message": "^0.1.13",
-    "react-native-vector-icons": "^6.5.0",
+    "react-native-vector-icons": "^7.1.0",
     "url": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
     "@babel/runtime": "7.4.5",
+    "@jest/reporters": "^26.4.1",
     "babel-jest": "24.8.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "detox": "^12.11.1",
