Update build tools and configurations

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -16,3 +16,17 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+
+#
+# 2020-9-18
+#
+# https://github.com/material-components/material-components-android/issues/193#issuecomment-450471987
+#
+# This solved a merge issue with the `AndroidManifest.xml` files
+#
+android.useAndroidX=true
+android.enableJetifier=true
+
+# 2020-9-21 https://stackoverflow.com/a/60026260/1356582
+org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
