--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,8 +73,14 @@ import com.android.build.OutputFile
  */
 
 project.ext.react = [
-    entryFile: "index.js"
+    entryFile: "index.js",
+    jsBundleDirRelease: "$buildDir/intermediates/merged_assets/release/out",
+    enableHermes: false,  // clean and rebuild if changing
+    hermesCommand: "../../node_modules/hermes-engine/%OS-BIN%/hermes",
 ]
+
+def jscFlavor = 'org.webkit:android-jsc:+'
+def enableHermes = project.ext.react.get("enableHermes", false);
 
 apply from: "../../node_modules/react-native/react.gradle"
 
@@ -154,6 +160,11 @@ android {
             }
         }
     }
+
+  // 2020-9-21 https://stackoverflow.com/a/60026260/1356582
+  dexOptions {
+    javaMaxHeapSize "4g"
+  }
 }
 
 dependencies {
@@ -162,8 +173,18 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
-    androidTestImplementation('com.wix:detox:+') { transitive = true } 
+    // 2020-9-21 https://github.com/facebook/react-native/issues/25537#issuecomment-645932708
+    implementation 'com.facebook.soloader:soloader:0.9.0+'
+    androidTestImplementation('com.wix:detox:+') { transitive = true }
     androidTestImplementation 'junit:junit:4.12'
+
+    if (enableHermes) {
+      def hermesPath = "../../node_modules/hermesvm/android/";
+      debugImplementation files(hermesPath + "hermes-debug.aar")
+      releaseImplementation files(hermesPath + "hermes-release.aar")
+    } else {
+      implementation jscFlavor
+    }
 }
 
 // Run this once to be able to run the application with BUCK
