--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "28.0.3"
+        buildToolsVersion = "29.0.2"
         minSdkVersion = 18
         compileSdkVersion = 28
         targetSdkVersion = 28
@@ -14,7 +14,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:3.4.0")
+        classpath("com.android.tools.build:gradle:4.0.1")
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -34,7 +34,12 @@ allprojects {
           // All of Detox' artifacts are provided via the npm module
           url "$rootDir/../node_modules/detox/Detox-android"
         }
-//        maven { url "https://jitpack.io" } 
-//        maven { url "https://maven.google.com" } 
+        maven {
+          // Android JSC is installed from npm
+          url("$rootDir/../node_modules/jsc-android/dist")
+        }
+        maven { url "https://jitpack.io" }
+        maven { url "https://maven.google.com" }
     }
 }
+
